build/log/idf_py_stdout_output_428389
[1/12] Performing build step for 'bootloader'
[1/1] cd /home/tjc/esp/develop/esp-ai/build/bootloader/esp-idf/esptool_py && /home/tjc/.espressif/python_env/idf5.3_py3.8_env/bin/python /home/tjc/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/tjc/esp/develop/esp-ai/build/bootloader/bootloader.bin
Bootloader binary size 0x5810 bytes. 0x27f0 bytes (31%) free.
[2/10] Building C object esp-idf/hardware_driver/CMakeFiles/__idf_hardware_driver.dir/boards/esp32-s3/bsp_board.c.obj
FAILED: esp-idf/hardware_driver/CMakeFiles/__idf_hardware_driver.dir/boards/esp32-s3/bsp_board.c.obj 
/home/tjc/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -Iconfig -I../components/hardware_driver/include -I../components/hardware_driver/boards/include -I/home/tjc/esp/esp-idf/components/newlib/platform_include -I/home/tjc/esp/esp-idf/components/freertos/config/include -I/home/tjc/esp/esp-idf/components/freertos/config/include/freertos -I/home/tjc/esp/esp-idf/components/freertos/config/xtensa/include -I/home/tjc/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/tjc/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/tjc/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/tjc/esp/esp-idf/components/freertos/esp_additions/include -I/home/tjc/esp/esp-idf/components/esp_hw_support/include -I/home/tjc/esp/esp-idf/components/esp_hw_support/include/soc -I/home/tjc/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/tjc/esp/esp-idf/components/esp_hw_support/dma/include -I/home/tjc/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/tjc/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/tjc/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/home/tjc/esp/esp-idf/components/heap/include -I/home/tjc/esp/esp-idf/components/log/include -I/home/tjc/esp/esp-idf/components/soc/include -I/home/tjc/esp/esp-idf/components/soc/esp32s3 -I/home/tjc/esp/esp-idf/components/soc/esp32s3/include -I/home/tjc/esp/esp-idf/components/hal/platform_port/include -I/home/tjc/esp/esp-idf/components/hal/esp32s3/include -I/home/tjc/esp/esp-idf/components/hal/include -I/home/tjc/esp/esp-idf/components/esp_rom/include -I/home/tjc/esp/esp-idf/components/esp_rom/include/esp32s3 -I/home/tjc/esp/esp-idf/components/esp_rom/esp32s3 -I/home/tjc/esp/esp-idf/components/esp_common/include -I/home/tjc/esp/esp-idf/components/esp_system/include -I/home/tjc/esp/esp-idf/components/esp_system/port/soc -I/home/tjc/esp/esp-idf/components/esp_system/port/include/private -I/home/tjc/esp/esp-idf/components/xtensa/esp32s3/include -I/home/tjc/esp/esp-idf/components/xtensa/include -I/home/tjc/esp/esp-idf/components/xtensa/deprecated_include -I/home/tjc/esp/esp-idf/components/lwip/include -I/home/tjc/esp/esp-idf/components/lwip/include/apps -I/home/tjc/esp/esp-idf/components/lwip/include/apps/sntp -I/home/tjc/esp/esp-idf/components/lwip/lwip/src/include -I/home/tjc/esp/esp-idf/components/lwip/port/include -I/home/tjc/esp/esp-idf/components/lwip/port/freertos/include -I/home/tjc/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/tjc/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/tjc/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/tjc/esp/esp-idf/components/driver/deprecated -I/home/tjc/esp/esp-idf/components/driver/i2c/include -I/home/tjc/esp/esp-idf/components/driver/touch_sensor/include -I/home/tjc/esp/esp-idf/components/driver/twai/include -I/home/tjc/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/home/tjc/esp/esp-idf/components/esp_pm/include -I/home/tjc/esp/esp-idf/components/esp_ringbuf/include -I/home/tjc/esp/esp-idf/components/esp_driver_gpio/include -I/home/tjc/esp/esp-idf/components/esp_driver_pcnt/include -I/home/tjc/esp/esp-idf/components/esp_driver_gptimer/include -I/home/tjc/esp/esp-idf/components/esp_driver_spi/include -I/home/tjc/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/tjc/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/tjc/esp/esp-idf/components/esp_driver_i2s/include -I/home/tjc/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/tjc/esp/esp-idf/components/sdmmc/include -I/home/tjc/esp/esp-idf/components/esp_driver_sdspi/include -I/home/tjc/esp/esp-idf/components/esp_driver_sdio/include -I/home/tjc/esp/esp-idf/components/esp_driver_dac/include -I/home/tjc/esp/esp-idf/components/esp_driver_rmt/include -I/home/tjc/esp/esp-idf/components/esp_driver_tsens/include -I/home/tjc/esp/esp-idf/components/esp_driver_sdm/include -I/home/tjc/esp/esp-idf/components/esp_driver_i2c/include -I/home/tjc/esp/esp-idf/components/esp_driver_uart/include -I/home/tjc/esp/esp-idf/components/vfs/include -I/home/tjc/esp/esp-idf/components/esp_driver_ledc/include -I/home/tjc/esp/esp-idf/components/esp_driver_parlio/include -I/home/tjc/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/tjc/esp/esp-idf/components/fatfs/diskio -I/home/tjc/esp/esp-idf/components/fatfs/src -I/home/tjc/esp/esp-idf/components/fatfs/vfs -I/home/tjc/esp/esp-idf/components/wear_levelling/include -I/home/tjc/esp/esp-idf/components/esp_partition/include -I/home/tjc/esp/esp-idf/components/spiffs/include -I../components/esp_codec_dev/include -I../components/esp_codec_dev/interface -I../components/esp_codec_dev/device/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy   -Wno-unused-variable -Wno-unused-function -Wno-ignored-qualifiers -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mdisable-hardware-atomics -O2 -fmacro-prefix-map=/home/tjc/esp/develop/esp-ai=. -fmacro-prefix-map=/home/tjc/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -w -Wno-format -MD -MT esp-idf/hardware_driver/CMakeFiles/__idf_hardware_driver.dir/boards/esp32-s3/bsp_board.c.obj -MF esp-idf/hardware_driver/CMakeFiles/__idf_hardware_driver.dir/boards/esp32-s3/bsp_board.c.obj.d -o esp-idf/hardware_driver/CMakeFiles/__idf_hardware_driver.dir/boards/esp32-s3/bsp_board.c.obj   -c ../components/hardware_driver/boards/esp32-s3/bsp_board.c
../components/hardware_driver/boards/esp32-s3/bsp_board.c:132:11: error: conflicting types for 'bsp_audio_play'; have 'esp_err_t(const int32_t *, size_t)' {aka 'int(const long int *, unsigned int)'}
  132 | esp_err_t bsp_audio_play(const int32_t *data, size_t size)
      |           ^~~~~~~~~~~~~~
In file included from ../components/hardware_driver/boards/esp32-s3/bsp_board.c:2:
../components/hardware_driver/boards/include/bsp_board.h:32:11: note: previous declaration of 'bsp_audio_play' with type 'esp_err_t(const int16_t *, size_t)' {aka 'int(const short int *, unsigned int)'}
   32 | esp_err_t bsp_audio_play(const int16_t *data, size_t size);
      |           ^~~~~~~~~~~~~~
[3/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/app/app_sr.c.obj
../main/app/app_sr.c: In function 'audio_feed_task':
../main/app/app_sr.c:68:46: warning: passing argument 1 of 'esp_i2s_read' from incompatible pointer type [-Wincompatible-pointer-types]
   68 |         esp_err_t read_result = esp_i2s_read((int32_t *)audio_buffer, BUFFER_SIZE * sizeof(int32_t));
      |                                              ^~~~~~~~~~~~~~~~~~~~~~~
      |                                              |
      |                                              int32_t * {aka long int *}
In file included from ../main/app/app_sr.c:24:
../components/hardware_driver/include/esp_board_init.h:10:33: note: expected 'int16_t *' {aka 'short int *'} but argument is of type 'int32_t *' {aka 'long int *'}
   10 | esp_err_t esp_i2s_read(int16_t *buffer, int buffer_len);
      |                        ~~~~~~~~~^~~~~~
[4/10] cd /home/tjc/esp/develop/esp-ai/build/esp-idf/main && /home/tjc/.espressif/python_env/idf5.3_py3.8_env/bin/python /home/tjc/esp/esp-idf/components/spiffs/spiffsgen.py 0x600000 /home/tjc/esp/develop/esp-ai/spiffs /home/tjc/esp/develop/esp-ai/build/storage.bin --page-size=256 --obj-name-len=32 --meta-len=4 --use-magic --use-magic-len
ninja: build stopped: subcommand failed.
